--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ div.introduction{
 
 div.red{
     background-color:#ff0000;
-    text-align: rights;
+    text-align: right;
     margin-left: 50px;
     border-bottom: 2px solid #ffffff;
     border-left: 5px solid #ffffff;
