--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ img{
 
 div{
     padding:20px;
-    border:3px solid #ffffff;
+    border: solid #ffffff;
+    border-width:3px;
     min-height:125px;
 }
 
@@ -47,16 +48,15 @@ div.red{
     background-color:#ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid #ffffff;
-    border-left: 5px solid #ffffff;
+    border-width: 0px 0px 2px 5px;
 }
 
+/*border:top, right, bottom, left*/
 div.blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px solid #ffffff;
-    border-top: 2px solid #ffffff;
+    border-width:2px 5px 0px 0px;
 }
 
 div.blue h2,div.blue p {
@@ -67,20 +67,18 @@ div.yellow{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid #ffffff;
-    border-left: 5px solid #ffffff;
+    border-width:0px 0px 2px 5px;
 }
 
 div.yellow p{
     color: #707070;
 }
-
+/*border:top, right, bottom, left*/
 div.green{
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-top: 2px solid #ffffff;
-    border-right: 5px solid #ffffff;
+    border-width:2px 5px 0px 0px;
 }
 
 footer{
@@ -95,4 +93,6 @@ footer p{
     padding-top: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
+
+    padding-left: 0px;
 }
